<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/replacementFragmentId">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:gravity="center">

                    <com.github.mikephil.charting.charts.PieChart

                        android:id="@+id/pieChartCaffeine"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        />
                    
                    <TextView
                        android:id="@+id/caffeineTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="300 mg"
                        android:textSize="30dp">

                    </TextView>

                </RelativeLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp">
                    
                    <RelativeLayout
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginLeft="10dp">

                        <TextView
                            android:id="@+id/totalDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="$24"
                            android:textSize="30dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center_horizontal"
                            android:layout_centerHorizontal="true">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="today"
                            android:textSize="22dp"
                            android:layout_marginBottom="30dp"
                            android:gravity="center_horizontal"
                            android:layout_alignParentBottom="true">
                        </TextView>

                    </RelativeLayout>

                    <com.github.mikephil.charting.charts.BarChart

                        android:id="@+id/barChartPriceDaily"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <RelativeLayout
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginLeft="10dp">

                        <TextView
                            android:id="@+id/totalWeek"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="$234"
                            android:textSize="30dp"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="10dp">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="this week"
                            android:layout_marginBottom="30dp"
                            android:textSize="22dp"
                            android:gravity="center_horizontal"
                            android:layout_alignParentBottom="true">
                        </TextView>

                    </RelativeLayout>

                    <com.github.mikephil.charting.charts.BarChart

                        android:id="@+id/barChartPriceWeekly"
                        android:layout_height="110dp"
                        android:layout_width="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <RelativeLayout
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:autoSizeMinTextSize="12sp"
                        android:autoSizeMaxTextSize="100sp"
                        android:autoSizeStepGranularity="2sp">

                        <TextView
                            android:id="@+id/totalMonth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="$420"
                            android:textSize="30dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center_horizontal"
                            android:layout_centerHorizontal="true">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="this month"
                            android:textSize="22dp"
                            android:layout_marginBottom="30dp"
                            android:gravity="center_horizontal"
                            android:layout_alignParentBottom="true">
                        </TextView>

                    </RelativeLayout>

                    <com.github.mikephil.charting.charts.BarChart

                        android:id="@+id/barChartPriceMonthly"
                        android:layout_height="110dp"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_horizontal">

                            <TextView
                                android:id="@+id/totalSpending"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="$1,563"
                                android:textSize="60sp"
                                android:gravity="center_horizontal"
                                android:layout_marginTop="20dp">
                            </TextView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="all time total"
                                android:gravity="center_horizontal"
                                android:textSize="20sp">
                            </TextView>

                        </LinearLayout>



                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">




                </LinearLayout>

            </LinearLayout>



        </RelativeLayout>



    </ScrollView>

</LinearLayout>