...
<!--        android:drawableStart="@drawable/ic_mail_black_24dp"-->
<!--        android:paddingLeft="6dp">-->
<!--    </Button>-->


    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:text="login with google"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_google_logo"
        android:drawableLeft="@drawable/ic_google_logo" />

</RelativeLayout>
